Updated method names

--- a/force-app/main/default/classes/HCPEnrollmentService.cls
+++ b/force-app/main/default/classes/HCPEnrollmentService.cls
@@ -226,11 +226,7 @@ public without sharing class HCPEnrollmentService {
         return getHCPEnrollmentById(hcpeId, CommunityService.USER_MODE_HCP);
     }
 
-    public HCP_Enrollment__c getHCPEnrollment(Id hcpeId, String userMode){
-        return getHCPEnrollmentById(hcpeId, userMode);
-    }
-
-    public static HCP_Enrollment__c getHCPEnrollmentById(Id hcpeId, String userMode){
+    public HCP_Enrollment__c getHCPEnrollmentByIdImpl(Id hcpeId, String userMode){
         List<HCP_Enrollment__c> hcpeList = getHCPEnrollmentsCommon(
                 userMode,
                 ' AND Id =\'' + hcpeId + '\'',
@@ -238,6 +234,10 @@ public without sharing class HCPEnrollmentService {
         );
         if(hcpeList.size() == 0) throw new CommunityServiceException('Data not found');
         return hcpeList[0];
+    }
+
+    public static HCP_Enrollment__c getHCPEnrollmentById(Id hcpeId, String userMode){
+        return HCPEnrollmentService.getInstance().getHCPEnrollmentByIdImpl(hcpeId, userMode);
     }
 
     public static List<HCP_Enrollment__c> getHCPEnrollmentsForPI(){
