--- a/force-app/main/default/classes/TrialService.cls
+++ b/force-app/main/default/classes/TrialService.cls
@@ -18,8 +18,39 @@ public without sharing class TrialService {
         instance = (TrialService) Test.createStub(TrialService.class, stubProvider);
     }
 
-    public Clinical_Trial_Profile__c getTrialFromId(Id trialId){
-        return getTrial(trialId);
+    public Clinical_Trial_Profile__c getTrialImpl(Id trialId){
+        List<Clinical_Trial_Profile__c> trials = [
+                SELECT Id, Orientation_Required__c,
+                        Name,
+                        Terms_And_Conditions_ID__c,
+                        Study_Sponsor__c,
+                        Study_Type__c,
+                        Detailed_Description__c,
+                        toLabel(Override_Recruitment_Status__c),
+                        Brief_Summary__c,
+                        Override_Description__c,
+                        Override_Inclusion_Criteria__c,
+                        Override_Exclusion_Criteria__c,
+                        Condition_s_Therapeutic_Area__c,
+                        Sponsor_Pays_for_Referral_Activity__c,
+                        Study_Phase__c, NCT_Number__c,
+                        Protocol_ID__c,
+                        Enrollment_Start_Date__c,
+                        Enrolled_End_Date__c,
+                        Link_to_Medical_Record_Review__c,
+                        Link_to_Pre_screening__c,
+                        Study_Title__c,
+                        Study_Code_Name__c,
+                        Official_Title__c,
+                        Interventions__c,
+                        Profile_Picture__c,
+                        Share_URL__c
+                FROM Clinical_Trial_Profile__c
+                WHERE Id =: trialId
+        ];
+        if(trials.size() == 0) throw new CommunityServiceException('Data not found');
+        TranslateHelper.translate(trials[0]);
+        return trials[0];
     }
 
     public static List<Clinical_Trial_Profile__c> getAvailableTrials(String mode){
@@ -55,38 +86,7 @@ public without sharing class TrialService {
     }
 
     public static Clinical_Trial_Profile__c getTrial(Id trialId){
-        List<Clinical_Trial_Profile__c> trials = [
-                SELECT Id, Orientation_Required__c,
-                        Name,
-                        Terms_And_Conditions_ID__c,
-                        Study_Sponsor__c,
-                        Study_Type__c,
-                        Detailed_Description__c,
-                        toLabel(Override_Recruitment_Status__c),
-                        Brief_Summary__c,
-                        Override_Description__c,
-                        Override_Inclusion_Criteria__c,
-                        Override_Exclusion_Criteria__c,
-                        Condition_s_Therapeutic_Area__c,
-                        Sponsor_Pays_for_Referral_Activity__c,
-                        Study_Phase__c, NCT_Number__c,
-                        Protocol_ID__c,
-                        Enrollment_Start_Date__c,
-                        Enrolled_End_Date__c,
-                        Link_to_Medical_Record_Review__c,
-                        Link_to_Pre_screening__c,
-                        Study_Title__c,
-                        Study_Code_Name__c,
-                        Official_Title__c,
-                        Interventions__c,
-                        Profile_Picture__c,
-                        Share_URL__c
-                FROM Clinical_Trial_Profile__c
-                WHERE Id =: trialId
-        ];
-        if(trials.size() == 0) throw new CommunityServiceException('Data not found');
-        TranslateHelper.translate(trials[0]);
-        return trials[0];
+        return TrialService.getInstance().getTrialImpl(trialId);
     }
 
     public static Boolean isTrialAvailable(Id trialId, String userMode){
