PEH-180 (in progress).

--- a/force-app/main/default/classes/SearchConditionsOfInterestRemote.cls
+++ b/force-app/main/default/classes/SearchConditionsOfInterestRemote.cls
@@ -8,6 +8,8 @@ public with sharing class SearchConditionsOfInterestRemote {
     public static List<ConditionOfInterestRemote.CAWrapper> searchConditionOfInterest(String nameTA) {
         DatabaseProxy databaseProxy = (DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class);
         List<ConditionOfInterestRemote.CAWrapper> caWrappers = new List<ConditionOfInterestRemote.CAWrapper>();
+        CommunityService cService = (CommunityService) ClassFactory.newInstance(CommunityService.class);
+        String participantId = cService.getParticipantId();
 
         String tAQuery =
                 'SELECT Id, ' +
@@ -20,13 +22,24 @@ public with sharing class SearchConditionsOfInterestRemote {
         if (!therapeuticAreas.isEmpty()) {
             for (Therapeutic_Area__c areaPatient : therapeuticAreas) {
                 ConditionOfInterestRemote.CAWrapper caWrapper = new ConditionOfInterestRemote.CAWrapper ();
-                caWrapper.order = 0;
                 caWrapper.isSelected = false;
-                caWrapper.therArea = areaPatient;
+                caWrapper.coi = new Therapeutic_Area_Patient__c(
+                        Participant__c = participantId,
+                        Therapeutic_Area__c = areaPatient.Id,
+                        Therapeutic_Area__r = areaPatient,
+                        Condition_Of_Interest_Order__c = 100
+                );
                 caWrappers.add(caWrapper);
             }
         }
         return caWrappers;
+    }
+
+    @AuraEnabled
+    public static void deleteCOI(List<Id> coiIds) {
+        if (!coiIds.isEmpty()) {
+            Database.delete(coiIds);
+        }
     }
 
 }
