--- a/force-app/main/default/classes/ConditionOfInterestRemote.cls
+++ b/force-app/main/default/classes/ConditionOfInterestRemote.cls
@@ -3,7 +3,7 @@
  */
 
 public with sharing class ConditionOfInterestRemote {
-
+    public static final String COI = 'Condition_of_Interests';
     @AuraEnabled
     public static List<ConditionOfInterestRemote.CAWrapper> getConditionOfInterest() {
         Participant__c participant = getParticipant();
@@ -33,9 +33,10 @@ public with sharing class ConditionOfInterestRemote {
         String participantQuery =
                 'SELECT Id, ' +
                         'Conditions__c, ' +
-                        '(SELECT Id, Therapeutic_Area__c, Therapeutic_Area__r.Name, IsRelatedToStudy__c, Condition_Of_Interest_Order__c ' +
+                        '(SELECT Id, Therapeutic_Area__c, Therapeutic_Area__r.Name, Therapeutic_Area__r.RecordType.DeveloperName, IsRelatedToStudy__c, Condition_Of_Interest_Order__c ' +
                         'FROM Therapeutic_Area_Patients__r ' +
-                        'WHERE Condition_Of_Interest_Order__c > 0' +
+                        'WHERE Condition_Of_Interest_Order__c > 0 ' +
+                        'AND Therapeutic_Area__r.RecordType.DeveloperName = \'' + COI + '\' ' +
                         'ORDER BY Condition_Of_Interest_Order__c) ' +
                         'FROM Participant__c ' +
                         'WHERE Id = \'' + participantId + '\'';
