--- a/force-app/main/default/classes/PatientDelegateRemote.cls
+++ b/force-app/main/default/classes/PatientDelegateRemote.cls
@@ -32,7 +32,7 @@ public class PatientDelegateRemote {
     @AuraEnabled
     public static String isDelegate() {
         try{
-            return ParticipantService.getParticipantState().isDelegate ? 'TRUE' : 'FALSE';
+            return ParticipantService.getInstance().getState().isDelegate ? 'TRUE' : 'FALSE';
         }catch (Exception e){
             AuraHelper.throwException(e);
             return null;
